<resources>
    <string name="app_name">Furniture</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="furniture">FURNITURE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="product_one">
        Polyester
Easily assembles with a friend, no tools needed, in under 20 minutes
Modern armless design with stress-free fabrics, durable and easy-to-clean
A naturally-strong wood frame is wrapped in cozy...</string>
    <string name="name_product_one"> Zinus Jocelyn Contemporary 65 Inch</string>

    <string name="product_tow">

L-shaped gaming desk is made out of a beautiful MDF that appearance and functionality are classy and efficient in home/office
L shaped gaming desk in 3 piece,easy switch the two sides as your habit,which take full advantage of space and save space fits nicely into a room without taking up a ton of space

    </string>
    <string name="name_product_tow">  GreenForest L-Shape Corner </string>
    <string name="product_three">

        WINGBACK CHAIR: Our Clarice Tall Wingback Fabric Accent Chair in light beige will meet all your indoor furniture needs. This high-class lounge chair pairs perfectly with an ottoman and comes in a variety of colors to suit any style.
CLASSIC ARMLESS STYLE: At Great Deal Furniture, we bring you the best furniture available.
    </string>
    <string name="name_product_three">   Christopher Knight Home </string>
    <string name="product_four">
        Sealy, 8-Inch, Memory Foam bed in a box, Adaptive Comfort Layers, Medium-Firm Feel, Twin
        bed in a box: 8-inch twin high density memory foam mattress built for comfort that lasts, year after year. A winning combination of CertiPUR-US Certified materials provide excellent pressure relief and support that “hugs you" ..
    </string>
    <string name="name_product_four">  Sealy</string>
    <string name="product_five">

        Keep your room clutter free with the SystemBuild Kendall 16” Stackable Storage Cabinet
The narrow width of this Storage Cabinet makes it ideal for small spaces, such as a kitchen or laundry room
Two of these Storage Cabinets can be stacked on top of one another, creating additional space (each cabinet sold separately)
16” ...
    </string>
    <string name="name_product_five"> Ameriwood Kendall </string>
    <string name="login">Login</string>
    <string name="register_now">Register now</string>
    <string name="loading">Loading…</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook">facebook</string>
    <string name="goole">Goole</string>
    <string name="facebook_imv">facebook imv</string>
    <string name="save">Save</string>


</resources>
