<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome_to"
        android:textAppearance="@style/welcome_to" />

    <TextView
        android:id="@+id/furniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_to"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal|top"
        android:text="@string/furniture"
        android:textAppearance="@style/furniture"
       />

    <EditText
        android:id="@+id/editText"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/furniture"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/boder_edittext"
        android:drawableStart="@drawable/ic_account_box_white_24dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textColorHint="@android:color/holo_red_light"
         />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/boder_edittext"
        android:drawableStart="@drawable/ic_vpn_key_white_24dp"
        android:drawablePadding="4dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/holo_red_light" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="#E23C3C"
        android:padding="18dp"
        android:text="@string/login"
        android:textColor="#FFFCFC" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#E23C3C"
        android:padding="18dp"
        android:text="@string/register_now"
        android:textColor="#FFF5F5"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:src="@drawable/facebook" />

            <Button
                android:id="@+id/btfacebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:text="@string/facebook"
                android:textColor="#FFFFFF"
                android:background="#3A559F"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FrameLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:src="@drawable/google"
                tools:ignore="ContentDescription" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="#E23C3C"
                android:text="@string/goole"
                android:textColor="#FFF2F2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>